service-platform-operations/base-config/kube-yamls/microservice-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${APP_NAME}
  namespace: ${APP_NAMESPACE}
spec:
  replicas: ${APP_INST_CNT} # tells deployment to run ${APP_INST_CNT} pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: ${APP_NAME}-app
    spec:
      containers:
        - name: ${APP_NAME}
          image: ${APP_DCK_REPO_TAG}
          ports:
          - containerPort: ${APP_CONT_PORT}
