service-platform-operations/base-config/kube-yamls/microservice-ingress-path.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${APP_NAME}-path
  namespace: ${APP_NAMESPACE}
spec:
  rules:
  - host: ${PLATFORM_BASE_DOMAIN}
    http:
      paths:
      - backend:
          serviceName: ${APP_NAME}
          servicePort: ${APP_SVC_PORT}
        path: /${APP_SUBDOMAIN}/${APP_NAME}
